# notes

./: pyproject.toml
notes/: settings.py  urls.py
users/: models.py  urls.py  views.py
